# bmp2text

./: CMakeLists.txt  README.md  bmp_read.c
